--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -4,7 +4,7 @@
   <header>
     <nav class="navbar navbar-light" style="background-color: lightskyblue">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'Posts:posts_list' %}">
+        <a class="navbar-brand" href="{% url 'posts:posts_list' %}">
           <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
           <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
           <span style="color:red">Ya</span>tube
