--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,30 +1,9 @@
-{% extends 'base.html' %}
-{% block content %}
-{% load thumbnail %}
-  <div class="container py-5">
-    <h1> {{ group.title }} </h1>
-    <p> {{group.description}} </p>
-    {% for post in posts %}
-      <article>
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}      
-        <p>
-          {{ post.text }}
-        </p>         
-      </article>
-      {% if post.group %}   
-      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-      {% endif %} 
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %} 
-  </div>  
-{% endblock %}
+{% extends 'base.html' %} 
+{% block content %} 
+{% load thumbnail %} 
+  <div class="container py-5"> 
+    <h1> {{ group.title }} </h1> 
+    <p> {{group.description}} </p> 
+    {% include 'posts/includes/posts.html' %}
+  </div>   
+{% endblock %} 
