--- a/yatube/templates/posts/includes/posts.html
+++ b/yatube/templates/posts/includes/posts.html
@@ -3,10 +3,10 @@
 <article>
   <ul>
     <li>
-      Автор: {{ post.author.get_full_name }}
+      Автор: {{ post.author.username }}
     </li>
     <li>
-      Дата публикации: {{ pub_date|date:"d E Y" }}
+      Дата публикации: {{post.pub_date|date:"d E Y" }}
     </li>
   </ul>
   {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
